@@ -1,13 +1,14 @@
 dnl Version information
 m4_define([datetime_version_major], [0])
 m4_define([datetime_version_minor], [6])
-m4_define([datetime_version_micro], [1])
+m4_define([datetime_version_micro], [2])
 m4_define([datetime_version], [datetime_version_major().datetime_version_minor().datetime_version_micro()])
 
 dnl Initialize autoconf
-AC_COPYRIGHT([Copyright (c) 2006
-        Remco den Breeje <remco@sx.mine.nu>])
-AC_INIT([xfce4-datetime-plugin], [datetime_version], [ongardie@gmail.com])
+AC_COPYRIGHT([Copyright (c) 2006-2009
+        Remco den Breeje <remco@sx.mine.nu>
+        Diego Ongaro <ongardie@gmail.com>])
+AC_INIT([xfce4-datetime-plugin], [datetime_version], [goodies-dev@xfce.org])
 
 dnl Initialize automake
 AM_INIT_AUTOMAKE([AC_PACKAGE_TARNAME()], [AC_PACKAGE_VERSION()])
